--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
-<title>Easystems &#8211; Soluciones simples, sistemas innovadores.</title>
+<title>Easystems &#8211; soluciones simples, sistemas innovadores.</title>
 <link rel="alternate" type="application/rss+xml" title="Easystems &raquo; Feed" href="/?feed=rss2">
 <link rel="alternate" type="application/rss+xml" title="Easystems &raquo; RSS de los comentarios" href="/?feed=comments-rss2">
 <script>
