--- a/src/404/index.html
+++ b/src/404/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <html>
 <head>
-<title>404 Pagina no encontrada</title>
+<title>404 Pagina no encontrada.</title>
 </head>
 <body>
 <h1>Not Found</h1>
