publicando pagina desde windows

--- a/src/index.html
+++ b/src/index.html
@@ -422,7 +422,7 @@ p{line-height: 1.5;}</style>
 <div class="wp-block-group is-layout-constrained wp-block-group-is-layout-constrained">
 <div class="wp-block-group is-layout-flow wp-container-core-group-layout-36 wp-block-group-is-layout-flow">
 <div class="wp-block-group wp-block-group-heading is-layout-flow wp-block-group-is-layout-flow">
-<h6 class="wp-block-heading has-text-align-center has-body-text-color has-text-color has-medium-font-size" style="font-style:normal;font-weight:600;line-height:1.8;text-transform:uppercase">Promotional Contact</h6>
+<h6 class="wp-block-heading has-text-align-center has-body-text-color has-text-color has-medium-font-size" style="font-style:normal;font-weight:600;line-height:1.8;text-transform:uppercase">promotional contact</h6>
 
 
 
